--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.3.2
   uuid: ^4.5.1
   intl: ^0.20.2
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
